--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,8 @@
   font-family: sans-serif;
   text-align: center;
 }
+
+.CountrySelector {
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, sans-serif;
+}
